# photozoo-

./: .env.example  .gitignore  AGENTS.md  DEPLOYMENT_RU.md  README.md  pyproject.toml  requirements.txt  trading-points.example.json
cron/: photozoom-analytics.cron
scripts/: run_daily_report.sh
src/photozoom_analytics/: __init__.py  analysis.py  app.py  auto_report.py  config.py  report.py  sheets.py  telegram.py
